--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,21 @@ version: 2.1
 orbs:
   # Declare a dependency on the welcome-orb
   welcome: circleci/welcome-orb@0.4.1
+# jobs
+jobs:
+  print_hello:
+    docker:
+      - image: circleci/node:13.8.0
+      
+    steps:
+      - run echo "hello"
+      
+  print_world:
+    docker:
+      - image: circleci/node:13.8.0
+      
+    steps:
+      - run echo "world"
 # Orchestrate or schedule a set of jobs
 workflows:
   # Name the workflow "welcome"
