--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,4 +25,5 @@ workflows:
   welcome:
     # Run the welcome/run job in its own container
     jobs:
-      - welcome/run
+      - print_hello
+      - print_world
