--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,14 +11,16 @@ jobs:
       - image: circleci/node:13.8.0
       
     steps:
-      - run echo "hello"
+      - run 
+        command: echo "hello"
       
   print_world:
     docker:
       - image: circleci/node:13.8.0
       
     steps:
-      - run echo "world"
+      - run 
+        command: echo "world"
 # Orchestrate or schedule a set of jobs
 workflows:
   # Name the workflow "welcome"
