--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,16 +11,14 @@ jobs:
       - image: circleci/node:13.8.0
       
     steps:
-      - run 
-        command: echo "hello"
+      - run: echo "hello"
       
   print_world:
     docker:
       - image: circleci/node:13.8.0
       
     steps:
-      - run 
-        command: echo "world"
+      - run: echo "world"
 # Orchestrate or schedule a set of jobs
 workflows:
   # Name the workflow "welcome"
