--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,6 @@ workflows:
     # Run the welcome/run job in its own container
     jobs:
       - print_hello
-      - print_world
+      - print_world:
           requires: 
             - print_hello
