--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
       - image: circleci/node:13.8.0    
     steps:
       - run: echo "world"
+      - run: echo $NAME
 # Orchestrate or schedule a set of jobs
 workflows:
   # Name the workflow "welcome"
