--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - run: echo "hello world" > output.txt
       - persist_to_workspace:
-          root: /tmp/workspace
+          root: .
           paths:
             - .
       
@@ -19,7 +19,7 @@ jobs:
       - image: circleci/node:13.8.0  
     steps:
       - attach_workspace:
-          at: /tmp/workspace
+          at: .
       - run: cat output.txt
        
 
