--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,34 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 # Use a package of configuration called an orb.
-
+commands:
+  print_pipeline_id:
+    steps:
+      - run: echo $CIRCLE_WORKFLOW_ID 
 # jobs
 jobs:
-  save_hello_world_output:
-    docker:
-      - image: circleci/node:13.8.0  
-    steps:
-      - run: echo "hello world" > output.txt
-      - persist_to_workspace:
-          root: .
-          paths:
-            - .
+#   save_hello_world_output:
+#     docker:
+#       - image: circleci/node:13.8.0  
+#     steps:
+#       - run: echo "hello world" > output.txt
+#       - persist_to_workspace:
+#           root: .
+#           paths:
+#             - .
       
-  print_output_file:
+#   print_output_file:
+#     docker:
+#       - image: circleci/node:13.8.0  
+#     steps:
+#       - attach_workspace:
+#           at: .
+#       - run: cat output.txt
+  call_command:
     docker:
       - image: circleci/node:13.8.0  
     steps:
-      - attach_workspace:
-          at: .
-      - run: cat output.txt
-       
+      - print_pipeline_id
 
 # Orchestrate or schedule a set of jobs
 workflows:
@@ -29,7 +36,4 @@ workflows:
   welcome:
     # Run the welcome/run job in its own container
     jobs:
-      - save_hello_world_output
-      - print_output_file:
-          requires: 
-            - save_hello_world_output
+      - call_command
