--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,32 +7,17 @@ version: 2.1
 #       - run: echo $CIRCLE_WORKFLOW_ID 
 # jobs
 jobs:
-#   save_hello_world_output:
-#     docker:
-#       - image: circleci/node:13.8.0  
-#     steps:
-#       - run: echo "hello world" > output.txt
-#       - persist_to_workspace:
-#           root: .
-#           paths:
-#             - .
-      
-#   print_output_file:
-#     docker:
-#       - image: circleci/node:13.8.0  
-#     steps:
-#       - attach_workspace:
-#           at: .
-#       - run: cat output.txt
-  fail_jobs:
+  create_infrastructure:
     docker:
-      - image: circleci/node:13.8.0  
+      - image: amazon/aws-cli  
     steps:
-      - run: return 1
-    
+      - checkout
       - run:
-            command: echo "jobs failed"
-            when: on_fail
+          name: Ensure backend infrastructure exist
+          command: |
+            aws cloudformation deploy \
+              --template-file template.yml \
+              --stack-name my-stack
 
 # Orchestrate or schedule a set of jobs
 workflows:
@@ -40,4 +25,4 @@ workflows:
   welcome:
     # Run the welcome/run job in its own container
     jobs:
-      - fail_jobs
+      - create_infrastructure
