--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           name: Ensure backend infrastructure exist
           command: |
             aws cloudformation deploy \
-              --template-file template.yml \
+              --template-file .circleci/template.yml \
               --stack-name my-stack
 
 # Orchestrate or schedule a set of jobs
