--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - run:
           name: Configure server
           command: |
-            ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/main-remote.yml
+            ansible-playbook -i inventory.txt main-remote.yml
 
 # Orchestrate or schedule a set of jobs
 workflows:
